--- a/non-pipeline_analyses/RABV_nextstrain/environment.yml
+++ b/non-pipeline_analyses/RABV_nextstrain/environment.yml
@@ -5,10 +5,11 @@ channels:
   - defaults
 
 dependencies:
+  - augur=24.3.0
+  - auspice=2.52.0
+  - emboss
   - jupyterlab
+  - nextstrain-cli
   - pandas
   - seaborn
   - snakemake
-  - nextstrain-cli
-  - augur=24.3.0
-  - auspice=2.52.0
