--- a/non-pipeline_analyses/RABV_nextstrain/Configure/Input_Data/auspice_config.json
+++ b/non-pipeline_analyses/RABV_nextstrain/Configure/Input_Data/auspice_config.json
@@ -1,5 +1,5 @@
 {
-  "title": "Nextstrain build for Rabies virus",
+  "title": "Nextstrain build for Rabies virus and other lyssaviruses",
   "maintainers": [
     {
       "name": "the Bloom lab",
