Fix natural sequence numbering in site map and re-run natural sequence analysis

--- a/non-pipeline_analyses/RABV_nextstrain/Snakefile
+++ b/non-pipeline_analyses/RABV_nextstrain/Snakefile
@@ -37,7 +37,7 @@ rule all:
         # Auspice
         expand("auspice/{gene}.json", gene=GENES),
         # Natural variation
-        expand("Results/{gene}/Alignments/{gene}_natural_variation.fasta", gene=GENES)
+        expand("Results/{gene}/Alignments/{gene}_natural_variation.csv", gene=GENES)
 
 
 # Make DAG of rule execution
