--- a/non-pipeline_analyses/RABV_nextstrain/Configure/Input_Data/auspice_config.json
+++ b/non-pipeline_analyses/RABV_nextstrain/Configure/Input_Data/auspice_config.json
@@ -40,112 +40,120 @@
     {
       "key": "predicted RVC20 escape",
       "title": "Predicted RVC20 escape",
+      "type": "continuous",
       "scale": [
         [
           0.0,
-          "#DDDDDD"
+          "#FFFFFF"
         ],
         [
           5.62,
-          "#0072B2"
+          "#0D0FA1"
         ]
       ]
     },
     {
       "key": "predicted RVA122 escape",
       "title": "Predicted RVA122 escape",
+      "type": "continuous",
       "scale": [
         [
           0.0,
-          "#DDDDDD"
+          "#FFFFFF"
         ],
         [
           3.2,
-          "#0072B2"
+          "#0D0FA1"
         ]
       ]
     },
     {
       "key": "predicted 17C7 escape",
       "title": "Predicted 17C7 escape",
+      "type": "continuous",
       "scale": [
         [
           0.0,
-          "#DDDDDD"
+          "#FFFFFF"
         ],
         [
           10.2,
-          "#0072B2"
+          "#0D0FA1"
         ]
       ]
     },
     {
       "key": "predicted RVC58 escape",
       "title": "Predicted RVC58 escape",
+      "type": "continuous",
       "scale": [
         [
           0.0,
-          "#DDDDDD"
+          "#FFFFFF"
         ],
         [
           3.305,
-          "#0072B2"
+          "#0D0FA1"
         ]
       ]
     },
     {
       "key": "predicted CR4098 escape",
       "title": "Predicted CR4098 escape",
+      "type": "continuous",
       "scale": [
         [
           0.0,
-          "#DDDDDD"
+          "#FFFFFF"
         ],
         [
           5.71,
-          "#0072B2"
+          "#0D0FA1"
         ]
       ]
     },
     {
       "key": "predicted CR57 escape",
       "title": "Predicted CR57 escape",
+      "type": "continuous",
       "scale": [
         [
           0.0,
-          "#DDDDDD"
+          "#FFFFFF"
         ],
         [
           8.91,
-          "#0072B2"
+          "#0D0FA1"
         ]
       ]
     },
     {
       "key": "predicted CTB012 escape",
       "title": "Predicted CTB012 escape",
+      "type": "continuous",
       "scale": [
         [
           0.0,
-          "#DDDDDD"
+          "#FFFFFF"
         ],
         [
           15.63,
-          "#0072B2"
+          "#0D0FA1"
         ]
       ]
     },
     {
       "key": "predicted RVC68 escape",
       "title": "Predicted RVC68 escape",
+      "type": "continuous",
       "scale": [
         [
           0.0,
-          "#DDDDDD"
+          "#FFFFFF"
         ],
         [
           17.0,
-          "#0072B2"
+          "#0D0FA1"
         ]
       ]
     }
@@ -162,7 +170,7 @@
   "display_defaults": {
     "map_triplicate": true,
     "distance_measure": "div",
-    "color_by" : "phylogroup",
+    "color_by" : "virus",
     "transmission_lines": false
   },
   "filters": [
