Improve nextstrain tree title and description (#46)

--- a/non-pipeline_analyses/RABV_nextstrain/Configure/Input_Data/auspice_config.json
+++ b/non-pipeline_analyses/RABV_nextstrain/Configure/Input_Data/auspice_config.json
@@ -170,7 +170,7 @@
   "display_defaults": {
     "map_triplicate": true,
     "distance_measure": "div",
-    "color_by" : "virus",
+    "color_by" : "predicted 17C7 escape",
     "transmission_lines": false
   },
   "filters": [
